syntax = "proto3";
package cosmos.staking.v1beta1;

option go_package = "github.com/cosmos/cosmos-sdk/x/staking/types";

import "gogoproto/gogo.proto";
import "cosmos/staking/v1beta1/staking.proto";

// GenesisState - all staking state that must be provided at genesis
message GenesisState {
  Params params = 1 [(gogoproto.casttype) = "Params", (gogoproto.nullable) = false];
  bytes last_total_power = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags)   = "yaml:\"last_total_power\"",
    (gogoproto.nullable)   = false
  ];

  repeated LastValidatorPower last_validator_powers = 3 [
    (gogoproto.casttype) = "LastValidatorPower", 
    (gogoproto.moretags) = "yaml:\"last_validator_powers\"",
    (gogoproto.nullable) = false
  ];

  repeated Validator validators = 4 [
    (gogoproto.casttype) = "Validator", 
    (gogoproto.nullable) = false
  ];

  repeated Delegation delegations = 5 [
    (gogoproto.casttype) = "Delegation", 
    (gogoproto.nullable) = false
  ];

  repeated UnbondingDelegation unbonding_delegations = 6 [
    (gogoproto.casttype) = "UnbondingDelegation", 
    (gogoproto.moretags) = "yaml:\"unbonding_delegations\"",
    (gogoproto.nullable) = false
  ];

  repeated Redelegation redelegations = 7 [
    (gogoproto.casttype) = "Redelegation", 
    (gogoproto.nullable) = false
  ];

  bool exported = 8;
}

// LastValidatorPower required for validator set update logic
message LastValidatorPower {
  bytes address = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.ValAddress"];
  int64 power = 2;
}
